Hoan thien header, fix warning tippyjs, css scrollbar cho language va body

--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -6,6 +6,7 @@
 .container {
     width: var(--default-layout-width);
     min-height: 1000px;
+    margin-top: var(--default-layout-header-height);
     display: flex;
 }
 .content{
