--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -55,16 +55,22 @@
 .menu-popper {
     padding-bottom: 8px;
 }
+.menu-body {
+    overflow-y: auto;
+
+}
 // Menu items
 .menu-item {
-    background-color: #fff;
+    background-color: var(--white);
     width: 100%;
-    display: block;
+    display: flex;
     justify-content: flex-start;
     border-radius: 0;
     padding: 11px 16px;
     line-height: 1.8rem;
     font-weight: 600;
+    font-family: var(--font-family);
+    font-size: 1.6rem;
 
     &.separate {
         border-top: 1px solid rgba(22, 24, 35, 0.12);
@@ -79,6 +85,7 @@
     position: relative;
     height: 50px;
     margin-top: -8px;
+    flex-shrink: 0;
 }
 .back-btn {
     width: 50px;
