--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
     width: 100%;
-    display: block;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
     max-height: min((100vh - 96px) - 60px, 734px);
     min-height: 100px;
     border-radius: 8px;
